RESOLVED FIXED149158
Fix the !ENABLE(DFG_JIT) build after r188696
https://bugs.webkit.org/show_bug.cgi?id=149158
Summary Fix the !ENABLE(DFG_JIT) build after r188696
Csaba Osztrogonác
Reported 2015-09-15 04:11:44 PDT
https://trac.webkit.org/changeset/188696 broke the !ENABLE(DFG_JIT) build: ../../Source/JavaScriptCore/bytecode/GetByIdStatus.cpp: In static member function 'static JSC::GetByIdStatus JSC::GetByIdStatus::computeForStubInfo(const JSC::ConcurrentJITLocker&, JSC::CodeBlock*, JSC::StructureStubInfo*, JSC::CodeOrigin, WTF::UniquedStringImpl*)': ../../Source/JavaScriptCore/bytecode/GetByIdStatus.cpp:129:36: error: 'hasExitSite' is not a member of 'JSC::GetByIdStatus'
Attachments
Patch (2.48 KB, patch)
2015-09-15 04:17 PDT, Csaba Osztrogonác
no flags
Csaba Osztrogonác
Comment 1 2015-09-15 04:17:56 PDT
Yusuke Suzuki
Comment 2 2015-09-15 11:58:35 PDT
Comment on attachment 261185 [details] Patch r=me
WebKit Commit Bot
Comment 3 2015-09-15 12:47:48 PDT
Comment on attachment 261185 [details] Patch Clearing flags on attachment: 261185 Committed r189820: <http://trac.webkit.org/changeset/189820>
WebKit Commit Bot
Comment 4 2015-09-15 12:47:52 PDT
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.