Fix the !ENABLE(DFG_JIT) build after r188696 https://bugs.webkit.org/show_bug.cgi?id=149158

Reviewed by Yusuke Suzuki.

* bytecode/GetByIdStatus.cpp:
* bytecode/GetByIdStatus.h:


Canonical link: https://commits.webkit.org/167277@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@189820 268f45cc-cd09-0410-ab3c-d52691b4dbfc